--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,10 @@
+// Variables for colors, fonts, and breakpoints
 $primary-color: #4caf50;
 $secondary-color: #ff9800;
 $background-color: #f9f9f9;
+$text-color: #333;
 
+$font-header: 'Roboto Slab', 'sans-serif';
 $font-stack: 'Arial, sans-serif';
 
 $breakpoints: (
