--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,5 @@
-@import "variables";
-@import "mixins";
-@import "globals";
-@import "buttons";
-@import "layout";
+@forward "variables";
+@forward "mixins";
+@forward "globals";
+@forward "buttons";
+@forward "layout";
