--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,10 +1,12 @@
+@use "../../scss/variables" as vars;
+
 // Sticky Footer
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  background: $primary-color;
-  color: $text-color;
+  background: vars.$primary-color;
+  color: vars.$text-color;
   text-align: center;
   padding: 15px;
 }
