--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -9,7 +9,7 @@
 }
 
 // Section Styling (Consistent Page Spacing)
-.section {
+section {
   padding: 60px 20px;
 }
 
@@ -22,12 +22,14 @@
   &.cols-2 {
     > * {
       flex: 1 1 calc(50% - 15px);
+      max-width: calc(50% - 15px);
     }
   }
 
   &.cols-3 {
     > * {
       flex: 1 1 calc(33.333% - 15px);
+      max-width: calc(33.333% - 15px);
     }
   }
 
