--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -8,6 +8,12 @@
   }
 }
 
+@mixin respond-min($size) {
+  @media (min-width: map.get(vars.$breakpoints, $size)) {
+    @content;
+  }
+}
+
 // Flexbox Centering Mixin
 @mixin flex-center {
   display: flex;
