--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -17,9 +17,9 @@
 
 // Section Styling (Consistent Page Spacing)
 section {
-  padding: 60px 20px;
+  padding: 30px 20px 60px 20px;
   @include respond-min(xlarge) {
-    padding: 60px 0px;
+    padding: 30px 0px 60px 0px;
   }
 }
 
